Bug 503036 - Information panel preview exhibits jarring scaling/resize animation when switching between files with different aspect ratios, regardless of global animation settings
Summary: Information panel preview exhibits jarring scaling/resize animation when swit...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: information (other bugs)
Version First Reported In: 25.03.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-04-20 01:40 UTC by Jwadow
Modified: 2025-10-23 14:26 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Video showing the bug, all animations in kdeglobal/dolphinrc are disabled. (1.80 MB, video/mp4)
2025-04-20 01:40 UTC, Jwadow
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jwadow 2025-04-20 01:40:28 UTC
Created attachment 180421 [details]
Video showing the bug, all animations in kdeglobal/dolphinrc are disabled.

STEPS TO REPRODUCE
1. Open Dolphin.
2. Ensure the Information Panel is visible (View -> Panels -> Information Panel or F11).
3. Ensure previews (e.g., for images) are enabled in the Information Panel settings.
4. Select a file with a preview (e.g., a landscape image). Observe the preview in the panel.
5. Immediately select another file with a preview that has a significantly different aspect ratio (e.g., a portrait image or a square one).

OBSERVED RESULT
The preview image widget in the Information Panel visibly and rapidly scales/resizes from the previous preview's dimensions/aspect ratio to the new one's. This creates a jarring visual "jump", "jitter" or animation effect that is independent of the global KDE/Qt animation settings.

EXPECTED RESULT
Ideally, the new preview image should appear instantly without any visible scaling animation or transition from the previous preview's dimensions. Alternatively, there should be a setting to disable this specific scaling effect, or it should respect the global `AnimationsEnabled=false` / `AnimationDurationFactor=0.0` settings in `kdeglobals`.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux (Using Cinnamon DE, not Plasma)
Qt Version: qt6-base 6.9.0-1

ADDITIONAL INFORMATION
- Standard methods to disable animations (`AnimationsEnabled=false`, `AnimationDurationFactor=0.0` in `~/.config/kdeglobals`) have been tried and do *not* affect this specific preview scaling behavior in the information panel.
- Attempting to set `AnimationDurationFactor=0` within the `[KDE]` section of `~/.config/dolphinrc` also had no effect on this behavior.
- The effect is visually distracting and uncomfortable, especially when browsing quickly through many files (like photos) with varying aspect ratios.
- Using Arch Linux with Cinnamon DE, Dolphin installed from official Arch repositories. Windowing system is X11.
Comment 1 John Kizer 2025-04-21 17:50:23 UTC
I can reproduce on Dolphin 25.04.0, thanks!
Comment 2 Leonardo (MrPowerGamerBR) 2025-08-01 02:17:17 UTC
This happens because the duration is hardcoded in the PixmapViewer https://github.com/KDE/dolphin/blob/0ccc15422da4d7b8455ae988aed2ae38734ac96e/src/panels/information/pixmapviewer.cpp#L27

Because it is so jarring, I did create a hacky patch to disable the animations while this isn't fixed, however I do think that it would be better to add an option to disable the animation without disabling all KDE animations too: https://discuss.kde.org/t/disable-dolphin-preview-animation/35346/15
Comment 3 Bug Janitor Service 2025-10-23 10:56:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/1074
Comment 4 Marco Martin 2025-10-23 14:26:18 UTC
Git commit 2a3f1badca2a5f21bfb62022d3ff435c7e74cca7 by Marco Martin.
Committed on 23/10/2025 at 14:26.
Pushed by mart into branch 'master'.

Don't do an animation on the information panel

The information panel does a scaling animation when switching between files. It does not completely make sense because the pixmap passes immediately to the new one, it just animates the scale between the two which just looks glitchy. the effect is particularly visible when switching between a normal folder and one that has thumbnails overlayed on top: the two folder icons appear the same size, but still a weird animation occurs when going from one to another.

Also, the rest of the text of the information panel does change immediately. ideally perhaps some sort of fading animation could make sense, but only if everything in that panel faded together, only the icon fading with the text that is already the "new" one doesn't make much sense

M  +3    -55   src/panels/information/pixmapviewer.cpp
M  +1    -27   src/panels/information/pixmapviewer.h

https://invent.kde.org/system/dolphin/-/commit/2a3f1badca2a5f21bfb62022d3ff435c7e74cca7